Updated code before deploy

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.3",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
+    "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
