--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/poppins": "^5.2.6",
     "@supabase/supabase-js": "^2.50.3",
+    "autoprefixer": "^10.4.21",
     "leaflet": "^1.9.4",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "openai": "^5.8.2",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.30",
+    "autoprefixer": "^10.4.16",
     "typescript": "5.8.3"
   },
   "main": "index.js",
